--- a/result/2022-07-02.md
+++ b/result/2022-07-02.md
@@ -43,3 +43,4 @@
 43. [2022全球冠军杯淘汰赛](https://s.weibo.com//weibo?q=%232022%E5%85%A8%E7%90%83%E5%86%A0%E5%86%9B%E6%9D%AF%E6%B7%98%E6%B1%B0%E8%B5%9B%23&Refer=top) 116052
 44. [麻辣烫老板算是遇到对手了](https://s.weibo.com//weibo?q=%23%E9%BA%BB%E8%BE%A3%E7%83%AB%E8%80%81%E6%9D%BF%E7%AE%97%E6%98%AF%E9%81%87%E5%88%B0%E5%AF%B9%E6%89%8B%E4%BA%86%23&Refer=top) 111240
 45. [安徽灵璧全县管控足不出户](https://s.weibo.com//weibo?q=%23%E5%AE%89%E5%BE%BD%E7%81%B5%E7%92%A7%E5%85%A8%E5%8E%BF%E7%AE%A1%E6%8E%A7%E8%B6%B3%E4%B8%8D%E5%87%BA%E6%88%B7%23&Refer=top) 88809
+46. [PDD直播唱歌被起诉](https://s.weibo.com//weibo?q=%23PDD%E7%9B%B4%E6%92%AD%E5%94%B1%E6%AD%8C%E8%A2%AB%E8%B5%B7%E8%AF%89%23&Refer=top) 69084
