--- a/result/2022-07-03.md
+++ b/result/2022-07-03.md
@@ -40,3 +40,4 @@
 40. [没想到结个婚还挺废人](https://s.weibo.com//weibo?q=%23%E6%B2%A1%E6%83%B3%E5%88%B0%E7%BB%93%E4%B8%AA%E5%A9%9A%E8%BF%98%E6%8C%BA%E5%BA%9F%E4%BA%BA%23&Refer=top) 105429
 41. [女子称民警拦截电诈是关心过头](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%A7%B0%E6%B0%91%E8%AD%A6%E6%8B%A6%E6%88%AA%E7%94%B5%E8%AF%88%E6%98%AF%E5%85%B3%E5%BF%83%E8%BF%87%E5%A4%B4%23&Refer=top) 105285
 42. [青海湖湟鱼跃起洄游](https://s.weibo.com//weibo?q=%23%E9%9D%92%E6%B5%B7%E6%B9%96%E6%B9%9F%E9%B1%BC%E8%B7%83%E8%B5%B7%E6%B4%84%E6%B8%B8%23&Refer=top) 98490
+43. [2022国际泳联世锦赛](https://s.weibo.com//weibo?q=%232022%E5%9B%BD%E9%99%85%E6%B3%B3%E8%81%94%E4%B8%96%E9%94%A6%E8%B5%9B%23&Refer=top) 23556
