--- a/result/2022-07-04.md
+++ b/result/2022-07-04.md
@@ -26,9 +26,9 @@
 26. [坦然的老夫子](https://s.weibo.com//weibo?q=%23%E5%9D%A6%E7%84%B6%E7%9A%84%E8%80%81%E5%A4%AB%E5%AD%90%23&Refer=top) 241336
 27. [张学友声明](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%AD%A6%E5%8F%8B%E5%A3%B0%E6%98%8E%23&Refer=top) 229227
 28. [巨型蜂窝压塌天花板收获60斤蜂蜜](https://s.weibo.com//weibo?q=%23%E5%B7%A8%E5%9E%8B%E8%9C%82%E7%AA%9D%E5%8E%8B%E5%A1%8C%E5%A4%A9%E8%8A%B1%E6%9D%BF%E6%94%B6%E8%8E%B760%E6%96%A4%E8%9C%82%E8%9C%9C%23&Refer=top) 226520
-29. [西安或将遇连续40度高温](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%88%96%E5%B0%86%E9%81%87%E8%BF%9E%E7%BB%AD40%E5%BA%A6%E9%AB%98%E6%B8%A9%23&Refer=top) 201739
-30. [女子烫睫毛发生燃爆火球扑面袭来](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%83%AB%E7%9D%AB%E6%AF%9B%E5%8F%91%E7%94%9F%E7%87%83%E7%88%86%E7%81%AB%E7%90%83%E6%89%91%E9%9D%A2%E8%A2%AD%E6%9D%A5%23&Refer=top) 196666
-31. [周冠宇没事就好](https://s.weibo.com//weibo?q=%E5%91%A8%E5%86%A0%E5%AE%87%E6%B2%A1%E4%BA%8B%E5%B0%B1%E5%A5%BD&Refer=top) 195757
+29. [周冠宇没事就好](https://s.weibo.com//weibo?q=%E5%91%A8%E5%86%A0%E5%AE%87%E6%B2%A1%E4%BA%8B%E5%B0%B1%E5%A5%BD&Refer=top) 215814
+30. [西安或将遇连续40度高温](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%88%96%E5%B0%86%E9%81%87%E8%BF%9E%E7%BB%AD40%E5%BA%A6%E9%AB%98%E6%B8%A9%23&Refer=top) 201739
+31. [女子烫睫毛发生燃爆火球扑面袭来](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%83%AB%E7%9D%AB%E6%AF%9B%E5%8F%91%E7%94%9F%E7%87%83%E7%88%86%E7%81%AB%E7%90%83%E6%89%91%E9%9D%A2%E8%A2%AD%E6%9D%A5%23&Refer=top) 196666
 32. [Gala五杀](https://s.weibo.com//weibo?q=%23Gala%E4%BA%94%E6%9D%80%23&Refer=top) 165694
 33. [杜锋点评中国男篮后卫表现](https://s.weibo.com//weibo?q=%23%E6%9D%9C%E9%94%8B%E7%82%B9%E8%AF%84%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E5%90%8E%E5%8D%AB%E8%A1%A8%E7%8E%B0%23&Refer=top) 152765
 34. [杜锋](https://s.weibo.com//weibo?q=%E6%9D%9C%E9%94%8B&Refer=top) 152314
@@ -37,6 +37,7 @@
 37. [成都下周天气热到让人绝望](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E4%B8%8B%E5%91%A8%E5%A4%A9%E6%B0%94%E7%83%AD%E5%88%B0%E8%AE%A9%E4%BA%BA%E7%BB%9D%E6%9C%9B%23&Refer=top) 127763
 38. [浙江70岁大爷8年练出8块腹肌](https://s.weibo.com//weibo?q=%23%E6%B5%99%E6%B1%9F70%E5%B2%81%E5%A4%A7%E7%88%B78%E5%B9%B4%E7%BB%83%E5%87%BA8%E5%9D%97%E8%85%B9%E8%82%8C%23&Refer=top) 118563
 39. [中国跳水队第12金](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E8%B7%B3%E6%B0%B4%E9%98%9F%E7%AC%AC12%E9%87%91%23&Refer=top) 117783
-40. [跳水梦之队又夺冠了](https://s.weibo.com//weibo?q=%23%E8%B7%B3%E6%B0%B4%E6%A2%A6%E4%B9%8B%E9%98%9F%E5%8F%88%E5%A4%BA%E5%86%A0%E4%BA%86%23&Refer=top) 108263
-41. [如何评价郭艾伦对澳大利亚的表现](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E8%AF%84%E4%BB%B7%E9%83%AD%E8%89%BE%E4%BC%A6%E5%AF%B9%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E7%9A%84%E8%A1%A8%E7%8E%B0%23&Refer=top) 104594
-42. [4AM好可惜](https://s.weibo.com//weibo?q=4AM%E5%A5%BD%E5%8F%AF%E6%83%9C&Refer=top) 90759
+40. [如何评价郭艾伦对澳大利亚的表现](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E8%AF%84%E4%BB%B7%E9%83%AD%E8%89%BE%E4%BC%A6%E5%AF%B9%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E7%9A%84%E8%A1%A8%E7%8E%B0%23&Refer=top) 111239
+41. [跳水梦之队又夺冠了](https://s.weibo.com//weibo?q=%23%E8%B7%B3%E6%B0%B4%E6%A2%A6%E4%B9%8B%E9%98%9F%E5%8F%88%E5%A4%BA%E5%86%A0%E4%BA%86%23&Refer=top) 108263
+42. [原来爸妈才是真正的段子手](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E7%88%B8%E5%A6%88%E6%89%8D%E6%98%AF%E7%9C%9F%E6%AD%A3%E7%9A%84%E6%AE%B5%E5%AD%90%E6%89%8B%23&Refer=top) 90802
+43. [4AM好可惜](https://s.weibo.com//weibo?q=4AM%E5%A5%BD%E5%8F%AF%E6%83%9C&Refer=top) 90759
