--- a/result/2022-07-06.md
+++ b/result/2022-07-06.md
@@ -40,3 +40,4 @@
 40. [TJ沃伦签约篮网](https://s.weibo.com//weibo?q=%23TJ%E6%B2%83%E4%BC%A6%E7%AD%BE%E7%BA%A6%E7%AF%AE%E7%BD%91%23&Refer=top) 109924
 41. [见妻子被冲走旱鸭子丈夫扑进急流](https://s.weibo.com//weibo?q=%23%E8%A7%81%E5%A6%BB%E5%AD%90%E8%A2%AB%E5%86%B2%E8%B5%B0%E6%97%B1%E9%B8%AD%E5%AD%90%E4%B8%88%E5%A4%AB%E6%89%91%E8%BF%9B%E6%80%A5%E6%B5%81%23&Refer=top) 109493
 42. [这小棉袄有点漏风了](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%8F%E6%A3%89%E8%A2%84%E6%9C%89%E7%82%B9%E6%BC%8F%E9%A3%8E%E4%BA%86%23&Refer=top) 88553
+43. [疫情溢入是北京当前面临的最大风险](https://s.weibo.com//weibo?q=%23%E7%96%AB%E6%83%85%E6%BA%A2%E5%85%A5%E6%98%AF%E5%8C%97%E4%BA%AC%E5%BD%93%E5%89%8D%E9%9D%A2%E4%B8%B4%E7%9A%84%E6%9C%80%E5%A4%A7%E9%A3%8E%E9%99%A9%23&Refer=top) 24095
